@@ -1,5 +1,9 @@
 2002-05-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+        * slab.cpp: Improve support for complex modes.
+
+2002-05-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
         * slab.cpp: Improve support for surface plasmons.
 
 2002-05-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
